<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crop1">


  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="336dp"
      android:layout_height="256dp"
      android:layout_marginStart="44dp"
      android:background="@drawable/rounded_corner"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.936" />

  <TextView
      android:id="@+id/textView_login_fragment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/sign_in"
      android:textColor="@color/colorWhite"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.111"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toTopOf="@+id/imageView4" />

  <EditText
      android:id="@+id/edittext_name_login_fragment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:textColor="@android:color/white"
      android:hint="@string/email"
      android:textColorHint="@color/colorLoginText"
      android:inputType="textPersonName"
      android:minHeight="48dp"
      android:backgroundTint="@android:color/white"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.147"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/textView_login_fragment" />

  <EditText
      android:id="@+id/edittext_password_login_fragment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColor="@android:color/white"
      android:textColorHint="@color/colorLoginText"
      android:backgroundTint="@android:color/white"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.156"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/edittext_name_login_fragment" />

  <Button
      android:id="@+id/button_login_fragment"
      android:layout_width="211dp"
      android:layout_height="48dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/rounded_button"
      android:text="@string/login"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.526"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/edittext_password_login_fragment" />




</androidx.constraintlayout.widget.ConstraintLayout>